--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,26 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <div id="map" style="height: 35rem;"></div>
+  <ion-card>
+    <ion-item>
+      <ion-icon name="map" item-left large></ion-icon>
+      <h2>Place</h2>
+      <p>{{address}}</p>
+    </ion-item>
+    <ion-item>
+      <button primary clear item-left (click)="geolocate()">
+        <ion-icon name="pin"></ion-icon>
+        Geolocate
+      </button>
+       <button *ngIf="!isWatching" primary clear item-right (click)="watchPosition()">
+        <ion-icon name="navigate"></ion-icon>
+        Watch
+      </button>
+      <button *ngIf="isWatching" primary clear item-right (click)="stopWatching()">
+        <ion-icon name="hand"></ion-icon>
+        Stop
+      </button>     
+    </ion-item>
+  </ion-card>
 </ion-content>
