init help me out 08 jan 2017

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,8 +4,8 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <div id="map" style="height: 35rem;"></div>
+<ion-content padding class="page">
+  <div id="map" ></div>
   <ion-card>
     <ion-item>
       <ion-icon name="map" item-left large></ion-icon>
